--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,14 @@
 {% block body %}
     <div class="jumbotron">
         <p>
-        <input type="file" name="file" id="file-upload">
+            <input type="file" name="file" id="file-upload">
         </p>
 
+
         <p>
-        <div class="progress progress-striped" id="progress" style='height: 40px; display: none'>
-        <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"/>
-        </div>
+            <div class="progress progress-striped" id="progress" style='height: 40px; display: none'>
+                <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+            </div>
         </p>
 
         <div id="message"></div>
@@ -25,7 +26,7 @@
     <script language="javascript" src="{{ url_for('static', filename='js/S3MultipartUploader.js') }}"></script>
     <script language="javascript" src="{{ url_for('static', filename='js/fileinput.min.js') }}"></script>
     <script language="javascript">
-        $("#file-upload").fileinput({'showRemove':false, 'showPreview':false, 'mainTemplate':'{preview}<div class="input-group {class}">{caption}<div class="input-group-btn">{browse}{upload}</div></div>', 'uploadClass': 'btn btn-default uploadButton'});
+        $("#file-upload").fileinput({'showRemove': false, 'showPreview': false, 'mainTemplate': '{preview}<div class="input-group {class}">{caption}<div class="input-group-btn">{browse}{upload}</div></div>', 'uploadClass': 'btn btn-default uploadButton'});
 
         $(function () {
             var fileDOM = $("#file-upload");
@@ -46,17 +47,14 @@
                         $("#progress").removeClass("active");
                     }
                     else {
-                        $("#progress").addClass("active");
-                        $("#progress").css("display", "block");
+                        $("#progress").addClass("active").css("display", "block");
                     }
                     $("#progress-bar").css("width", progress + "%");
                 },
 
                 onDone: function (url) {
-                    $(".uploadButton").text("Upload").removeAttr("disabled");
-                    $("#message").html("Upload done!");
                     $("#media_url").val(url);
-                    //$("#upload_form").submit()
+                    $("#upload_form").submit()
                 }
             };
 
